<resources>
    <string name="app_name">OscsMallClient</string>
    <string name="sign_in_title">登录</string>
    <string name="sign_name">姓名</string>
    <string name="sign_password">密码</string>
    <string name="sign_in_tv">未注册？请先注册</string>
    <string name="sign_up_title">注册</string>
    <string name="oscsmall">OscsMall</string>
    <string name="phone_text">电话</string>
    <string name="email_text">email</string>
    <string name="question_text">问题</string>
    <string name="answer_text">答案</string>
    <string name="repassword_text">再次输入密码</string>
    <string name="register_text">注册</string>
    <string name="sign_up_tv">已经注册？请登录</string>
    <string name="fa_qrcode">{fa-qrcode}</string>
    <string name="fa_bell">{fa-bell}</string>
    <string name="search_hint">搜索</string>
    <string name="title_sort">分类</string>
    <string name="discover_title">寻觅</string>
    <string name="clear_cart_text">清空</string>
    <string name="cart_title">购物车</string>
    <string name="del_cart_text">删除</string>
    <string name="fa_check_circle_o">{fa-check-circle-o}</string>
    <string name="fa_angle_up">{fa-angle-up}</string>
    <string name="fa_angle_down">{fa-angle-down}</string>
    <string name="all_select_text">全选</string>
    <string name="settlement_btn_text">结算</string>
    <string name="fa_trash_icon">{fa-trash}</string>
    <string name="fa_paint_brush_icon">{fa-paint-brush}清空</string>
    <string name="ship_title">收货地址</string>
    <string name="shipping_change">收货编辑</string>
    <string name="confirm_the_change">确认修改</string>
    <string name="fa_arrow_left">{fa-arrow-left}</string>
    <string name="fa_arrow_right">{fa-arrow-right}</string>
    <string name="fa_credit_card">{fa-credit-card}</string>
    <string name="fa_map_marker">{fa-map-marker}</string>
    <string name="user_info_change">信息修改</string>
    <string name="fa_share_square_o">{fa-share-square-o}</string>
    <string name="goods_detail">商品详情</string>
    <string name="fa_chevron_circle_down">{fa-chevron-circle-down}</string>
    <string name="search_title">搜索</string>
    <string name="fa_search">{fa-search}</string>
    <string name="fa_plus_circle">{fa-plus-circle}</string>
    <string name="order_title">订单</string>
    <string name="fa_arrow_circle_right">{fa-arrow-circle-right}</string>
</resources>
