<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/background_color">
        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/shipping_change_back_icon"
            android:text="@string/fa_arrow_left"
            android:gravity="center"
            android:textSize="@dimen/tool_bar_title_size"
            android:layout_marginTop="@dimen/status_bar_margin_top"
            android:textColor="@android:color/white"
            android:layout_width="50dp"
            android:layout_height="60dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/status_bar_margin_top"
            android:gravity="center"
            android:text="@string/shipping_change"
            android:textColor="@android:color/white"
            android:textSize="@dimen/tool_bar_title_size"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_shipping_change_rv"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <Button
        android:id="@+id/sure_to_change"
        android:text="@string/confirm_the_change"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_margin="10dp"
        android:background="@color/background_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>