<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/index_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/index_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </android.support.v4.widget.SwipeRefreshLayout>
    <android.support.v7.widget.Toolbar
        android:id="@+id/index_toolbar"
        app:layout_behavior="win.pcdack.oscsmallclient.delegate.main.index.TransluncentBehavior"
        android:layout_width="match_parent"
        android:background="@android:color/transparent"
        android:layout_height="@dimen/toolbar_height">
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_marginTop="@dimen/status_bar_margin_top"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/index_qrcode_scan"
                android:textColor="@android:color/white"
                android:layout_gravity="left"
                android:gravity="center"
                android:paddingRight="2dp"
                android:text="@string/fa_qrcode"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/index_search_bar"
                android:hint="@string/search_hint"
                android:gravity="center_vertical"
                android:layout_gravity="center"
                android:background="@drawable/search_edit_background"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="40dp" />
            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/index_info_message"
                android:layout_gravity="right"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:text="@string/fa_bell"
                android:paddingLeft="2dp"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.Toolbar>
</android.support.design.widget.CoordinatorLayout>